# binance-futures-market-data

./: README.md  download_zipfiles.py  extract_zipfiles.py  pyproject.toml
data/urls/: BTCUSDT_230331.txt
data/urls/metrics/: BTCUSDT_220624.txt  BTCUSDT_220930.txt  BTCUSDT_221230.txt  BTCUSDT_230630.txt
